kubernetes/mock-razorpay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-razorpay-ingress
  namespace: auth
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /mock(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mock-razorpay-service
                port:
                  number: 8090
